chore: Added sample ENV

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PREFIX=!
 SITE=site:your-site.com
 ICON=https://location/to/icon.png
 LIMIT=3
+SEARCH_INDEX=0_0_0
+MEILISEARCH_PUBLIC_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
