--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,15 @@
-name: Publish to bot's Digital Ocean droplet
+name: publish
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-
-  deploy:
+  publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: install dependencies
+        run: yarn dev
