--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: yarn && yarn dev
+      - run: yarn && yarn start
