--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,4 +15,4 @@ jobs:
       DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      - run: yarn && yarn start
+      - run: yarn && yarn test
