--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,10 +20,5 @@ jobs:
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    environment: production
-    env:
-      NODE_ENV: "development"
-      DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-      - run: yarn && yarn test
+      - run: echo "Hi"
