--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
   deploy:
     needs: test
     # Only runs on if it's a push event on main
-    if: github.event_name == 'push' && github.refs == 'refs/heads/main'
+    if: ${{ github.event_name == 'push' && github.refs == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hi"
