--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,12 +28,12 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: appleboy/ssh-action@v0.1.2
+      - uses: appleboy/ssh-action@v0.1
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            echo "Hello world"
+            echo whoami
 
       
