Update start to run

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon --loader tsm .",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"test": "echo 'tested!'",
-		"start": "tsm ."
+		"run": "tsm ."
 	},
 	"license": "MIT",
 	"dependencies": {
