Update build command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"dev": "nodemon --loader tsm .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"test": "echo 'tested!'",
+		"build": "echo 'built!'",
 		"run": "tsm ."
 	},
 	"license": "MIT",
