--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 	"scripts": {
 		"dev": "nodemon --loader tsm .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"build": "tsc -p .",
-		"start": "yarn dev"
+		"build": "tsc"
 	},
 	"license": "MIT",
 	"dependencies": {
