--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
 	"name": "tauri-discord-bot",
 	"private": true,
 	"version": "0.0.0",
-	"type": "module",
-	"main": "dist/index.js",
 	"scripts": {
 		"dev": "nodemon --loader tsm .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"build": "tsc"
+		"build": "tsc",
+		"start": "node dist/index.js"
 	},
 	"license": "MIT",
 	"dependencies": {
@@ -16,6 +15,7 @@
 		"flexsearch": "0.7.21",
 		"jellycommands": "1.0.0-next.25",
 		"node-fetch": "3.2.6",
+		"ts-node": "^10.8.1",
 		"tsm": "2.2.1",
 		"unfurl.js": "5.7.0",
 		"url-regex": "5.0.0"
