--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,13 @@
 {
 	"compilerOptions": {
-		"target": "ES2020",
-		"module": "ES2020",
-		"outDir": "./dist",
-		"moduleResolution": "Node",
-		"strict": true,
-		"declaration": false,
-		"strictNullChecks": true,
-		"noImplicitReturns": true,
-		"noImplicitThis": true,
-		"noImplicitAny": true,
+		"module": "commonjs",
 		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"allowJs": true,
+		"target": "es6",
+		"noImplicitAny": true,
+		"moduleResolution": "node",
+		"sourceMap": true,
+		"outDir": "dist",
 		"skipLibCheck": true
 	},
-	"include": ["src/**/*"],
-	"exclude": ["dist"]
+	"include": ["src/**/*"]
 }
