--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
 	"dependencies": {
 		"discord.js": "13.8.0",
 		"dotenv": "16.0.1",
+		"express": "4.18.1",
 		"flexsearch": "0.7.21",
 		"jellycommands": "1.0.0-next.25",
 		"node-fetch": "3.2.6",
-		"ts-node": "^10.8.1",
+		"ts-node": "10.8.1",
 		"tsm": "2.2.1",
 		"unfurl.js": "5.7.0",
 		"url-regex": "5.0.0"
 	},
 	"devDependencies": {
+		"@types/express": "4.17.13",
 		"@types/flexsearch": "0.7.3",
 		"@types/node": "16.11.39",
 		"nodemon": "2.0.16",
