--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"private": true,
 	"version": "0.0.0",
 	"main": "src/index.ts",
-	"type": "module",
 	"scripts": {
 		"dev": "nodemon --loader tsm .",
 		"format": "prettier --write --plugin-search-dir=. .",
@@ -11,6 +10,9 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"@discordjs/builders": "^0.15.0",
+		"@discordjs/rest": "^0.5.0",
+		"discord-api-types": "^0.35.0",
 		"discord.js": "13.8.1",
 		"dotenv": "16.0.1",
 		"express": "4.18.1",
