--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"esModuleInterop": true,
-		"target": "es6",
-		"noImplicitAny": true,
+		"module": "es2022",
 		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"target": "ESNext",
+		"noImplicitAny": true,
 		"sourceMap": true,
 		"outDir": "dist",
 		"skipLibCheck": true
