--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 	"type": "module",
 	"scripts": {
 		"dev": "nodemon --loader tsm .",
-		"format": "prettier --write --plugin-search-dir=. .",
 		"start": "tsm ."
 	},
 	"license": "MIT",
@@ -14,26 +13,18 @@
 		"discord.js": "13.8.1",
 		"dotenv": "16.0.1",
 		"express": "4.18.1",
-		"flexsearch": "0.7.21",
 		"jellycommands": "1.0.0-next.27",
-		"node-fetch": "3.2.6",
 		"ts-node": "10.8.1",
 		"tsm": "2.2.1",
 		"unfurl.js": "5.7.0",
-		"url-regex": "5.0.0"
+		"url-regex-safe": "3.0.0"
 	},
 	"devDependencies": {
 		"@types/express": "4.17.13",
-		"@types/flexsearch": "0.7.3",
 		"@types/node": "16.11.43",
+		"@types/url-regex-safe": "^1.0.0",
 		"nodemon": "2.0.16",
 		"prettier": "2.7.1",
 		"typescript": "4.7.4"
-	},
-	"nodemonConfig": {
-		"watch": [
-			"src"
-		],
-		"ext": "ts"
 	}
 }
