--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "dist",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"lib": [
+		  "ES2021.String"
+		]
 	},
 	"include": ["src"]
 }
