--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
-	"compilerOptions": {
-		"module": "Node16",
-		"esModuleInterop": true,
-		"target": "ES2022",
-		"noImplicitAny": true,
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"outDir": "dist",
-		"skipLibCheck": true,
-		"lib": [
-		  "ES2021.String"
-		]
-	},
-	"include": ["src"]
+    "compilerOptions": {
+        "module": "ESNext",
+        "esModuleInterop": true,
+        "target": "ESNext",
+        "noImplicitAny": true,
+        "moduleResolution": "Node",
+        "sourceMap": true,
+        "outDir": "dist",
+        "skipLibCheck": true
+    },
+    "include": ["src"]
 }
